--- a/table.css
+++ b/table.css
@@ -1,11 +1,11 @@
 /* Styles for the document*/
 * {
-    background-color: #d9ffff;
-    font-family: 'Alata';
+    background-color: #3BC7FF;
 }
 
 body {
     padding-top: 60px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /*Styles for table */
@@ -13,7 +13,7 @@ th,
 td {
     width: 230px;
     height: 40px;
-    background-color: #f18118;
+    background-color: #eef115;
     text-align: center;
     font-size: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
